Add Vector and Line segment classes

--- a/module.yml
+++ b/module.yml
@@ -2,5 +2,6 @@ name: descartes
 description: "Imprecision-tolerant computational geometry for Wren"
 author: Chance Snow <git@chancesnow.me>
 license: MIT
+entry: descartes.wren
 tests: src/**/*.spec.wren
 devDependencies: [wren-assert]
